<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="16dp"
              android:orientation="vertical">
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/notification_title"
        android:textSize="22sp"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_gravity="center">

        <Button
            android:id="@+id/simple_notification_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notification_simple_button"/>

        <Button
            android:id="@+id/progress_notification_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notification_progress_button"
            android:layout_marginTop="16dp"/>

        <CheckBox
            android:id="@+id/notification_ongoing_progress_cb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/notification_ongoing_progress_cb"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center_horizontal"
            android:textSize="18sp"
            android:text="@string/wear_customized_notifications_label" />

        <Button
            android:id="@+id/reply_notification_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notification_reply_button"/>

        <Button
            android:id="@+id/multi_page_notification_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notification_multi_page_button"/>

    </LinearLayout>
    
</LinearLayout>
    